--- a/entregas/package.json
+++ b/entregas/package.json
@@ -14,6 +14,7 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
     "handlebars": "^4.7.8",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1"
   }
 }
