--- a/practicaClases/clase-08-11-25/package.json
+++ b/practicaClases/clase-08-11-25/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.3"
+    "express-handlebars": "^8.0.3",
+    "mongoose": "^8.19.3",
+    "mongoose-paginate-v2": "^1.9.1"
   }
 }
