--- a/entrega_final/package.json
+++ b/entrega_final/package.json
@@ -15,7 +15,9 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.1",
     "mongoose": "^8.19.4",
-    "mongoose-paginate-v2": "^1.9.1",
+    "mongoose-paginate-v2": "^1.9.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
